<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartPrevention</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login_button">LOGIN</string>
    <string name="login_sign_up">SIGN UP</string>
    <string name="register_sign_in">SIGN IN</string>
    <string name="register_login_in"></string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_alert">Alertas</string>

    <!--  -->
    <string name="alert_panic">Panico</string>
    <string name="alert_sos">S.O.S</string>
    <string name="alert_save">A Salvo</string>
</resources>
